content-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: content-service-mongo
  labels:
    app: content-service-mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: content-service-mongo
  template:
    metadata:
      labels:
        app: content-service-mongo
    spec:
      volumes:
        - name: mongo-volume
          hostPath:
            path: /home/fedgen/storage/mongodb/contentDB/
            type: Directory
      containers:
      - name: web
        image: fedgen/content:prod
        imagePullPolicy: IfNotPresent
        command: ['/bin/bash']
        args: ['-c',"gunicorn -w 4 -b 0.0.0.0:8000 'main:app'"]
        ports:
        - containerPort: 8000
          protocol: TCP
      - name: mongodb
        image: fedgen/content-db:1.0.1
        imagePullPolicy: IfNotPresent
        volumeMounts:
          - name: mongo-volume
            mountPath: /data/db
