content-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: content-service-ingress-secure
spec:
  entryPoints:
    - websecure
  routes:
  - match: Path(`/content/{[0aA-zZ9]+}`) || Path(`/content/{[aA0-zZ9]+}/{[aA0-zZ9]+}`)
    kind: Rule
    services:
    - name: content-service-mongo
      port: 8000
  tls:
    secretName: phis-fedgen-net-tls
