content-service-mongo-prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: content-service-mongo
  labels:
    app: content-service-mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: content-service-mongo
  template:
    metadata:
      labels:
        app: content-service-mongo
    spec:
      volumes:
        - name: mongo-volume
          hostPath:
            path: /home/fedgen/storage/mongodb/contentDB/
            type: Directory
      containers:
      - name: web
        image: fedgen/content:01
        imagePullPolicy: Always
        command: ['/bin/bash']
        args: ['-c',"gunicorn -w 4 -b 0.0.0.0:8000 'main:app'"]
        ports:
        - containerPort: 8000
          protocol: TCP
      - name: mongodb
        image: fedgen/content-db:1.0.1
        imagePullPolicy: IfNotPresent
        volumeMounts:
          - name: mongo-volume
            mountPath: /data/db
---
apiVersion: v1
kind: Service
metadata:
  name: content-service-mongo
spec:
  selector:
    app: content-service-mongo
  ports:
    - protocol: TCP
      port: 8000
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: content-service-ingress-secure
spec:
  entryPoints:
    - websecure
  routes:
  - match: Path(`/content/{[aA0-zZ9]+}`) || Path(`/content/{[aA0-zZ9]+}/{[aA0-zZ9]+}`)
    kind: Rule
    services:
    - name: content-service-mongo
      port: 8000
  tls:
    secretName: fedgen-ml-tls
